Added algo flow for hypernymy-hyponymy and meronymy extraction

--- a/misc_functions.ipynb
+++ b/misc_functions.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1262,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1275,7 @@
        " Synset('marginal_cost.n.01')]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1302,6 +1302,54 @@
    ],
    "source": [
     "token._.wordnet.synsets()[0].part_meronyms()  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Algo - \n",
+    "\n",
+    "###### For hypernym extraction\n",
+    "1. Create empty dict of hypernyms  -   \n",
+    "    ```\n",
+    "    {\n",
+    "\t\"word_num\": [{\n",
+    "\t\t\"hypernym_1\": {\n",
+    "\t\t\t\"rev_map\": {\n",
+    "\t\t\t\t\"direct\": [{\n",
+    "\t\t\t\t\t\"sense_id\": synset_object\n",
+    "\t\t\t\t}],\n",
+    "\t\t\t\t\"L1\": [{}],\n",
+    "\t\t\t\t\"L2\": [{}]\n",
+    "\t\t\t},\n",
+    "\t\t\t\"weight\": num\n",
+    "\t\t},\n",
+    "\t\t\"hypernym_2\": {}\n",
+    "\t}]}\n",
+    "    ```\n",
+    "- For each word in data \n",
+    "    - extract hypernym from synset mappings for word#number - Highest weight(8)\n",
+    "    - extract hypernym for all other synset mappings(5)\n",
+    "    - For each related word level 1 \n",
+    "        - Extract hypernym for word#number - weight(3)\n",
+    "        - Extract hypernym for all others - weight(2)\n",
+    "    - For each related word level 2\n",
+    "        - Extract hypernym for word#number - weight(1)\n",
+    "        - Extract hypernym for all others - weight(0.5)\n",
+    "    - Keep adding the hypernym weight to the right key. \n",
+    "    - Identify the right hypernym - One with highest weight and present in data, else next highest, and so on.\n",
+    "    - maintain a reverse map for each hypernym(for hyponymy calculation)\n",
+    "\n",
+    "##### For hyponymy\n",
+    "1. Initialize dict for hyponyms - ```{word: [hyponym1, hyponym2, ...]}```\n",
+    "- Use rev map created in previous step to identify hyponyms of the noun under consideration.\n",
+    "- For each entry in rev_map, get hyponyms from the synset object. Maintain the direct, L1, L2 structure.\n",
+    "- Extract and preserve hyponyms that exist in the data\n",
+    "\n",
+    "##### For meronymy\n",
+    "1. Use hypernymy-hyponymy relation to create a tree structure. \n",
+    "2. For each level of the tree, identify meronyms for each node, and preserve common meronyms, that are also present in the data."
    ]
   },
   {
