Added code to extract hypernyms

--- a/generate_sense_groups.ipynb
+++ b/generate_sense_groups.ipynb
@@ -26,7 +26,10 @@
     "from gensim.models import KeyedVectors\n",
     "import spacy\n",
     "from tqdm import tqdm\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from spacy_wordnet.wordnet_annotator import WordnetAnnotator \n",
+    "from collections import defaultdict\n",
+    "import ast"
    ]
   },
   {
@@ -2748,8 +2751,11 @@
     }
    ],
    "source": [
-    "contextual_data = prepare_corpus_data_with_context(corpus_fpath, window=window, force_update=False)\n",
-    "sense_group_dataframe = get_sense_group_from_corpus(contextual_data, wsd_model2, sense_vectors, corpus_data_sense_mappings_file)"
+    "if not os.path.exists(corpus_data_sense_mappings_file):\n",
+    "    contextual_data = prepare_corpus_data_with_context(corpus_fpath, window=window, force_update=False)\n",
+    "    sense_group_dataframe = get_sense_group_from_corpus(contextual_data, wsd_model2, sense_vectors, corpus_data_sense_mappings_file)\n",
+    "else:\n",
+    "    sense_group_dataframe = pd.read_csv(corpus_data_sense_mappings_file)"
    ]
   },
   {
@@ -2875,32 +2881,100 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "-----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Hypernymy extraction"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "weights = {\n",
+    "    \"direct_match\": 8,\n",
+    "    \"direct_nomatch\": 5,\n",
+    "    \"l1_match\": 3,\n",
+    "    \"l1_nomatch\": 2,\n",
+    "    \"l2_match\": 1,\n",
+    "    \"l2_nomatch\": 0.5,\n",
+    "}\n",
+    "\n",
+    "nlp = spacy.load(\"en\")\n",
+    "nlp.add_pipe(WordnetAnnotator(nlp.lang), after='tagger')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def generate_hypernymy(word, idx, hypernymy_dict, level=\"l1\"):\n",
+    "    token = nlp(str(word))[0]\n",
+    "    synsets = token._.wordnet.synsets()\n",
+    "    for syn in synsets:\n",
+    "        if syn.name().split(\".n.\")[0] == word and int(syn.name().split(\".n.\")[1]) == idx:\n",
+    "            match_str = \"match\"\n",
+    "        else:\n",
+    "            match_str = \"nomatch\"\n",
+    "\n",
+    "        hypernym_syn = syn.hypernyms()\n",
+    "        if len(hypernym_syn) >0:\n",
+    "            hypernym = hypernym_syn[0].name().split('.')[0]\n",
+    "            rev_map = {f\"{word}#{idx}\":syn}\n",
+    "            if level in hypernymy_dict[hypernym][\"rev_map\"]:\n",
+    "                hypernymy_dict[hypernym][\"rev_map\"][level].append(rev_map) \n",
+    "            else:\n",
+    "                hypernymy_dict[hypernym][\"rev_map\"][level] = [rev_map]\n",
+    "\n",
+    "            if \"sum_weight\" in hypernymy_dict[hypernym]:\n",
+    "                hypernymy_dict[hypernym][\"sum_weight\"] += weights[f\"{level}_{match_str}\"]\n",
+    "            else:\n",
+    "                hypernymy_dict[hypernym][\"sum_weight\"] = weights[f\"{level}_{match_str}\"]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all_hypernymy = []\n",
+    "all_hypernyms = []\n",
+    "num_words = len(sense_group_dataframe)\n",
+    "for _, row in tqdm(sense_group_dataframe[[\"sense_group_name\", \"sense_group_num\", \"related_senses\"]].iterrows(), total=num_words):\n",
+    "    word, idx, r_senses = row\n",
+    "    \n",
+    "    hypernymy_dict = defaultdict(lambda: defaultdict(dict))\n",
+    "    generate_hypernymy(word, hypernymy_dict, level=\"direct\")\n",
+    "    r_senses_list = ast.literal_eval(r_senses)\n",
+    "    for w in r_senses_list:\n",
+    "        related_word, related_idx = str(w).split(\"#\")\n",
+    "        generate_hypernymy(related_word, related_idx, hypernymy_dict)\n",
+    "    hypernymy_dict_sorted = {k: v for k, v in sorted(hypernymy_dict.items(), key=lambda item: item[1]['sum_weight'], reverse=True)}\n",
+    "    all_hypernyms.append(hypernymy_dict_sorted.keys[0])\n",
+    "    all_hypernymy.append(hypernymy_dict_sorted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sense_group_dataframe[\"hypernymy_map\"] = all_hypernymy\n",
+    "sense_group_dataframe[\"hypernym\"] = all_hypernyms"
+   ]
   }
  ],
  "metadata": {
@@ -2919,7 +2993,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
